# aero-s-foam

./: .hgignore  .mail_command  CMake-README  CMakeLists.txt  CTestTestfile.cmake  Doxyfile.in  HgIdentity.C  README.txt  Types.h  cmake_command  cmake_install.cmake  compare.pl  conanfile.py  frg-avery-config.cmake  jk  junk  link.txt  linker_script  lst  main.C  make_out  pavery-think-config.cmake  su-ahpcrc.stanford.edu-config.cmake
Comm.d/: BaseCommunicator.cpp  BaseCommunicator.h  CMakeLists.txt  CommTest.cpp  Communicator.C  Communicator.h  CommunicatorCore.C  MPICompatTraits.h  OpaqueCommunicator.cpp  OpaqueCommunicator.h  OpaqueHandle.cpp  OpaqueHandle.h
Corotational.d/: BarCorotator.C  BarCorotator.h  BarFCorotator.C  BarFCorotator.h  BarThermalCorotator.C  BarThermalCorotator.h  BeamCorotator.C  BeamCorotator.h  Brick20Corotator.C  Brick20Corotator.h  Brick32Corotator.C  Brick32Corotator.h  BrickCorotator.C  BrickCorotator.h  CMakeLists.txt  Corotator.C  Corotator.h  DistrGeomState.C  DistrGeomState.h  GeomNLSolver.C  GeomNLSolver.h  GeomState.C  GeomState.h  MatNLCorotator.C  MatNLCorotator.h  Penta15Corotator.C  Penta15Corotator.h  Penta26Corotator.C  Penta26Corotator.h  PentaCorotator.C  PentaCorotator.h  PhantomCorotator.C  PhantomCorotator.h  QuadThermalCorotator.C  QuadThermalCorotator.h  Shell3Corotator.C  Shell3Corotator.h  SpringCorotator.C  SpringCorotator.h  SuperCorotator.C  (+25 more)
Driver.d/: Access.h  Attrib.h  BOps.C  BOpsImpl.h  BaseSub.C  BinaryOutput.C  BinaryOutputInclude.C  CMakeLists.txt  Communicator.C  Communicator.h  CommunicatorCore.cpp  CondProbType.C  CornerMaker.C  CornerMaker.h  DMassData.h  DecDomain.C  DecDomain.h  DecDomainCore.C  DecDomainImpl.h  Domain.C  Domain.h  DomainOp.C  DomainOp.h  DomainPita.C  Dynam.C  Dynam.h  DynamProbType.C  DynamProbType.h  EFrameData.C  EFrameData.h  Eigen.C  EigenProbType.C  EigenProbType.h  GeoSource.C  GeoSource.h  GeoSourceCore.C  GeoSourceInstance.C  HData.C  HData.h  HDecDomain.C  (+48 more)
Element.d/: AddElem.C  CMakeLists.txt  Coordset.C  Element.C  Element.h  Elemset.C  NLElement.h  State.C  State.h  SuperElement.C  SuperElement.h  junk
Feti.d/: CGOrthoSet.C  CGOrthoSet.h  CMakeLists.txt  CoarseSet.C  CoarseSet.h  CoarseSetCore.C  CornerSelector.cpp  CornerSelector.h  DecomposedSystem.h  DistrVector.C  DistrVector.h  DistrVectorCore.C  DistrVectorSet.C  Feti.C  Feti.h  FetiBaseClass.h  FetiBaseSub.C  FetiCore.C  FetiDP.C  FetiDPCore.C  FetiInfo.h  FetiOp.C  FetiOp.h  FetiOpCore.C  FetiSub.cpp  FetiSub.h  GCROrthoSet.C  GCROrthoSet.h  GMRESOrthoSet.C  GMRESOrthoSet.h  MultiLevelFetiDP.cpp  NLFeti.C  NLFetiCore.C  OrthoSet.h  SetOfSubs.cpp  SetOfSubs.h  SingleCoarse.C
FetiLib/: CMakeLists.txt  ConcreteSub.cpp  ConcreteSub.h  CornerSelector.cpp  CornerSelector.h  DOFInfo.h  FDPSolver.cpp  FDPSolver.h  LibTest.cpp  SharedNodes.h  Subdomain.cpp  Subdomain.h  Types.h  VectorReference.h
HelmAxi.d/: AxiHElem.h  CMakeLists.txt  FourierDescrip.C  FourierDescrip.h  FourierHelmBCs.C  FourierHelmBCs.h  FourierProbTyp.C  FourierProbTyp.h  HelmAxiQuad.C  HelmAxiQuad.h  HelmAxiQuad8.C  HelmAxiQuad8.h  HelmAxiTri.C  HelmAxiTri.h  HelmAxiTri6.C  HelmAxiTri6.h  Line2AxiSommer.C  Line2AxiSommer.h  LineAxiSommer.C  LineAxiSommer.h  MDAxiData.C  MDAxiData.h  MDAxiDesc.C  MDAxiDesc.h  MPCData.C  MPCData.h  ScatterData.C  ScatterData.h  StaticTimersFetiHAxi.C  coefFourier.C  coefFourier.h  quad8aximas.f  quad8axistif1.f  quad8axistif2.f  quadaximas.f  quadaxistif1.f  quadaxistif2.f  tri3aximas.f  tri3axistif1.f  tri3axistif2.f  (+6 more)
Material.d/: CMakeLists.txt  ElastoPlasticPlaneStressMaterial.h  IsotropicLinearElasticJ2PlasticMaterial.cpp  IsotropicLinearElasticJ2PlasticMaterial.h  IsotropicLinearElasticJ2PlasticPlaneStressMaterial.cpp  IsotropicLinearElasticJ2PlasticPlaneStressMaterial.h  KorkolisKyriakidesPlaneStressMaterial.cpp  KorkolisKyriakidesPlaneStressMaterial.h  KorkolisKyriakidesPlaneStressMaterialWithExperimentalYielding.cpp  KorkolisKyriakidesPlaneStressMaterialWithExperimentalYielding.h  KorkolisKyriakidesPlaneStressMaterialWithExperimentalYielding2.cpp  KorkolisKyriakidesPlaneStressMaterialWithExperimentalYielding2.h  LinearElasticMaterial.cpp  Material.cpp  Material.h  MooneyRivlin.cpp  MooneyRivlin.h  NeoHookean.cpp  testJ2Plasticity.cpp  testPlaneStressJ2Plasticity.cpp
Math.d/: AddedMassMatrix.h  BLAS.h  BLKSparseMatrix.C  BLKSparseMatrix.h  BLKSparseMatrixC.C  BLKSparseMatrixC.h  BLKSparseMatrixCore.C  BigMatrix.C  BigMatrix.h  BigMatrixCore.C  CMakeLists.txt  ComplexD.h  CuCSparse.C  CuCSparse.h  CuCSparseCore.C  DBSparseMatrix.C  DBSparseMatrix.h  DBSparseMatrixCore.C  DiagMatrix.C  DiagMatrix.h  DistBLKSparse.C  DistBLKSparse.h  DistVector.h  EiSparseMatrix.C  EiSparseMatrix.h  EiSparseMatrixCore.C  Expr.h  FVector.h  FsiSparse.h  FullMatrix.C  FullMatrix.h  FullRectMatrix.C  FullRectMatrix.h  FullSquareMatrix.C  FullSquareMatrix.h  IntFullM.C  IntFullM.h  MpcSparse.C  MpcSparse.h  NBSparseMatrix.C  (+28 more)
Mortar.d/: CMakeLists.txt  MortarAutoDiff.h  MortarDefines.h
OOPita.d/: Activity.h  ActivityImpl.C  ActivityImpl.h  AffineDynamTimeIntegrator.h  AffineFineIntegratorManager.C  AffineFineIntegratorManager.h  AffineIntegratorPropagator.h  AffinePostProcessor.C  AffinePostProcessor.h  AlternatingIntegratorPropagator.C  AlternatingIntegratorPropagator.h  BasisTransform.C  CMakeLists.txt  CommManager.C  CommManager.h  CommManagerImpl.C  CommManagerImpl.h  CommSplitter.C  CommSplitter.h  ConcurrentBasisManager.C  ConcurrentBasisManager.h  CorrectionPropagator.h  DynamOps.h  DynamPropagator.h  DynamState.C  DynamState.h  DynamStateBasis.h  DynamStateBasisWrapper.h  DynamStatePlainBasis.C  DynamStatePlainBasis.h  DynamStateReconstructor.C  DynamStateReconstructor.h  DynamStateReconstructorImpl.C  DynamStateReconstructorImpl.h  DynamStateReductor.C  DynamStateReductor.h  DynamStateReductorImpl.C  DynamStateReductorImpl.h  DynamTimeIntegrator.h  FineIntegratorManager.h  (+168 more)
Parser.d/: AuxDefs.C  AuxDefs.h  CMakeLists.txt  DecInit.h  lexer.cpp  lexer.l  p.y  parser.cpp  parser.hpp
Rom.d/: BasisBinaryFile.C  BasisBinaryFile.h  (+173 more)
(+3764 files in other folders)
